--- a/toxin/src/blocks/cards/enter-card/enter-card.pug
+++ b/toxin/src/blocks/cards/enter-card/enter-card.pug
@@ -7,8 +7,8 @@ mixin enterCard()
         .enter__items
             .enter__item
                 +title('cards__title', 'Войти')
-                +inputField('', 'register__service--email text-field', '', 'email', 'Email')
-                +inputField('', 'register__service--password text-field', '', 'password', 'Пароль')
+                +inputField('', '', 'register__service--email text-field', '', 'email', 'Email')
+                +inputField('', '', 'register__service--password text-field', '', 'password', 'Пароль')
 
             .enter__item
                 +longButton('enter__button--long long-button', 'войти', 'long-button__icon', 'arrow_forward')
