--- a/toxin/src/blocks/form-elements/feedback/feedback.pug
+++ b/toxin/src/blocks/form-elements/feedback/feedback.pug
@@ -1,6 +1,6 @@
 include ../like-btn/like-btn
 
-mixin feedback(name, period, countLike, typeLike, comment)
+mixin feedback(name, period, comment)
     article(class="feedback")
         div(class="feedback__wrapper")
             div(class="feedback__avatar-wrapper")
@@ -9,8 +9,11 @@ mixin feedback(name, period, countLike, typeLike, comment)
                 div(class="feedback__author") #{name}
                 div(class="feedback__date") #{period}
         div(class="feedback__wrapper")
-            div(class="feedback__like")
-                +likeButton('12', 'favorite', 'like--active', 'like__icon--active')
-            div(class="feedback__text") #{comment}
-
-//-разобраться с блоком отзывы, доделать mixin like
+            if (name === 'Мурад Сарафанов')
+                div(class="feedback__like")
+                    +likeButton('12', 'favorite', 'like--active', 'like__icon--active')
+                div(class="feedback__text") #{comment}
+            else
+                div(class="feedback__like")
+                    +likeButton('2', 'favorite_border', '', '')
+                div(class="feedback__text") #{comment}
