--- a/toxin/src/pages/cards/cards.pug
+++ b/toxin/src/pages/cards/cards.pug
@@ -26,49 +26,7 @@ block cards-section
                 +registerAccountCard()
 
             .cards__column
-                .cards__item
-                    .booking__items
-                        .booking__item
-                            +booking('№', '888', 'люкс', '9 990₽', ' в сутки')
-
-                        .booking__item
-                            form(class="find-apartments__form" action="/mock-address" method="get")
-                                .datepicker-field
-                                    .datepicker-field--left
-                                        +subtitle('datepicker-field__title', 'Прибытие')
-                                        +datepickerLeft('text-field--datepicker text-field-datepicker--left', 'ДД.ММ.ГГГГ', 'startDate', 'start', 'material-icons--left-datepicker', 'expand_more')
-                                    .datepicker-field--right
-                                        +subtitle('datepicker-field__title', 'Выезд')
-                                        +datepickerRight('text-field--datepicker text-field-datepicker--right', 'ДД.ММ.ГГГГ', 'endDate', 'end', 'material-icons--left-datepicker', 'expand_more')
-
-                        .booking__item
-                            .find-apartments__item
-                                +subtitle('find-apartments__subtitle', 'Гости')
-                            .find-apartments__dropdown
-                                form(action="")
-                                    .form-elements__input--dropdown
-                                        +dropdown('3 гостя')
-
-                                    div(class="dropdown__menu")
-                                        +dropdownControls('item-adult', 'Взрослые', '-', '0', '+')
-                                        +dropdownControls('item-children', 'Дети', '-', '0', '+')
-                                        +dropdownControls('item-babies', 'Младенцы', '-', '0', '+')
-
-                                        div(class="dropdown__buttons" data-id="item-btn")
-                                            button(class="clear-btn") Очистить
-                                            button(class="apply-btn") Применить
-
-                        .booking__item
-                            .invoice__item
-                                .invoice
-                                    +invoice('invoice__service', '9 990₽ х 4 суток', '39 960₽')
-                                    +invoice('invoice__service invoice__service_with-icon', 'Сбор за услуги: скидка 2 179₽', '0₽')
-                                    +invoice('invoice__service  invoice__service_with-icon', 'Сбор за дополнительные услуги', '300₽')
-                                    +invoiceTotal('invoice__row invoice__row_font_large', 'Итого', 'invoice__block', '38 081₽')
-
-
-                        .booking__item
-                            +longButton('booking__button--long long-button', 'забронировать', 'long-button__icon', 'arrow_forward')
+                +bookingCard()
 
                 +enterCard()
 
@@ -80,8 +38,3 @@ block cards-section
                     .gallery__items
                         +gallery('gallery-1.jpg', 'true', '№', '888', 'люкс', '9 990₽', ' в сутки', 'star', '', 'cards__rate form-elements__rate--right', '145', 'Отзывов')
                         +gallery('gallery-2.jpg', 'false', '№', '840', '', '9 990₽', ' в сутки', 'star', '', '', '65', 'Отзывов')
-
-
-
-//- доделать галерею, вставить картинку, разобраться с ID в inputFiled(файл text-field.pug),убрать с миксина id
-//- доделать карточку галереи
