--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -29,12 +29,12 @@ block form-section
                 .form-elements-item--default
                     form(action="")
                         +textField('text field', 'default')
-                        +inputField('', 'text-field', 'default', 'email', 'Email')
+                        +inputField('', '', 'text-field', 'default', 'email', 'Email')
                 .form-elements-item--hover
                     form(action="")
                         .form-elements__descr
                             +textField('text field', 'hover')
-                            +inputField('', 'text-field', 'hover', 'email', 'Email')
+                            +inputField('', '', 'text-field', 'hover', 'email', 'Email')
 
                 .form-elements-item
                     .form-elements__dropdown
@@ -56,7 +56,7 @@ block form-section
                     .form-elements__dropdown
                         form(action="")
                             +formElementsHeader('masked text field')
-                            +inputField('--masked', 'text-field', '', 'text', 'ДД.ММ.ГГГГ')
+                            +inputField('form-elements__input', '--masked', 'text-field', '', 'text', 'ДД.ММ.ГГГГ')
 
                 .form-elements-item
                     .form-elements__datepicker
@@ -288,12 +288,9 @@ block form-section
                     .form-elements__bullet
                         form(action="")
                             +formElementsHeader('bullet list')
-                            ul(class="bullet")
-                                +bulletList('Нельзя с питомцами')
-                                +bulletList('Без вечеринок и мероприятий')
-                                +bulletList('Время прибытия — после 13:00, а выезд до 12:00')
+                            +bulletCard('Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00')
 
             .form-elements--bottom
                 .form-elements-item
                     .form-elements__feedback
-                        +feedback()
+                        +feedback('Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
