--- a/toxin/src/pages/room-details/room-details.scss
+++ b/toxin/src/pages/room-details/room-details.scss
@@ -1,3 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #fff !important;
+}
+
 .hero-gallery{
     display: flex;
     width: 100%;
@@ -37,6 +50,7 @@
 .chart__wrapper{
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .chart{
@@ -57,6 +71,12 @@
 .bullet__element{
     position: relative;
     padding-left: 20px;
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
 }
 
 .bullet__element::before {
@@ -84,4 +104,75 @@
 
 .bullet__element--grey::before {
     background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+}
+
+.room-details{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 70px;
+    justify-content: space-between;
+}
+
+.room-details__wrapper{
+    display: flex;
+    flex-direction: row;
+}
+
+.room-details__container{
+    display: flex;
+    flex-direction: column;
+    max-width: 711px;
+    width: 100%;
+    margin-top: -118px;
+}
+
+.room-details__comments{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.room-details__title{
+    font-family: Quicksand, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 24px;
+    color: #1F2041;
+    margin-bottom: 23px;
+    max-width: 341px;
+    width: 100%;
+}
+
+.room-details__subtitle{
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 14px;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.5);
+}
+
+.feedback{
+    margin-bottom: 23px;
+}
+
+.room-details__bullet{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+    justify-content: space-between;
+    max-width: 711px;
+    width: 100%;
+}
+
+.room-details__descr{
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
+    margin-top: 20px;
 }
