начала верстать search-room

--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -28,3 +28,4 @@ html
         block registration-section
         block signIn-section
         block roomDetails-section
+        block searchRoom-section
