--- a/toxin/src/blocks/form-elements/checkbox/checkbox.pug
+++ b/toxin/src/blocks/form-elements/checkbox/checkbox.pug
@@ -1,3 +1,16 @@
+include ../text-field/text-field
+
+mixin checkboxCard()
+    .form-elements__checkbox-wrapper
+        form(action="")
+            +formElementsHeader('Checkbox Buttons')
+            .checkboxs
+                +checkbox('', 'mark-smoke', 'checkbox-smoke', 'Можно курить', 'checkbox-smoke', 'smoke')
+                +checkbox('', 'mark-nursling', 'checkbox-nursling', 'Можно с питомцами', 'checkbox-nursling', 'nursling')
+                +checkbox('checkbox__marks--long-text', 'mark-guests', 'checkbox-guests', 'Можно пригласить гостей (до 10 человек)', 'checkbox-guests', 'guests')
+
+
+
 mixin checkbox(divClassName, idIcon, forInput, title, idInput, inputDataType)
     if divClassName
         .form-elements__checkbox
