--- a/toxin/src/blocks/form-elements/rich-checkbox/rich-checkbox.scss
+++ b/toxin/src/blocks/form-elements/rich-checkbox/rich-checkbox.scss
@@ -14,6 +14,7 @@
     font-family: Montserrat, OpenSans, sans-serif;
     font-weight: bold;
     color: rgba(31,32,65,0.75);
+    font-size: 14px;
 }
 
 .rich-checkbox {
