--- a/toxin/src/blocks/form-elements/rate-btn/rate-btn.pug
+++ b/toxin/src/blocks/form-elements/rate-btn/rate-btn.pug
@@ -1,4 +1,4 @@
-mixin rateButton(icon, iconBorder, iconWrapClassName)
+mixin rateButton(icon, iconBorder1, iconBorder2, iconWrapClassName)
     if iconWrapClassName
         div(class="form-elements__rate " +iconWrapClassName)
             i(class="rating__icon") #{icon}
@@ -6,10 +6,18 @@ mixin rateButton(icon, iconBorder, iconWrapClassName)
             i(class="rating__icon") #{icon}
             i(class="rating__icon") #{icon}
             i(class="rating__icon") #{icon}
+
+    else if (iconBorder2)
+        .form-elements__rate
+            i(class="rating__icon") #{icon}
+            i(class="rating__icon") #{icon}
+            i(class="rating__icon") #{icon}
+            i(class="rating__icon") #{iconBorder1}
+            i(class="rating__icon") #{iconBorder2}
     else
         .form-elements__rate
             i(class="rating__icon") #{icon}
             i(class="rating__icon") #{icon}
             i(class="rating__icon") #{icon}
             i(class="rating__icon") #{icon}
-            i(class="rating__icon") #{iconBorder}
+            i(class="rating__icon") #{iconBorder1}
