--- a/toxin/src/pages/registration/registration.scss
+++ b/toxin/src/pages/registration/registration.scss
@@ -1,5 +1,5 @@
 .registration__container{
-    background-image: url("/src/assets/images/registration-background.png");
+    background-image: url("~images/registration-background.png");
     background-position-x: center;
     background-repeat: no-repeat;
     height: 910px;
