--- a/toxin/src/pages/room-details/room-details.pug
+++ b/toxin/src/pages/room-details/room-details.pug
@@ -17,10 +17,10 @@ block roomDetails-section
 
     .hero-gallery
         .hero-gallery__left
-            img(src="../assets/images/room-1.png" alt="room-1")
+            img(src=require('assets/img/room-1.png'), alt="room-1")
         .hero-gallery__right
-            img(src="../assets/images/room-2.png" alt="room-2")
-            img(src="../assets/images/room-3.png" class="hero-gallery--small" alt="room-3")
+            img(src=require('assets/img/room-2.png'), alt="room-2")
+            img(src=require('assets/img/room-3.png'), class="hero-gallery--small", alt="room-3")
 
     .container
         .room-details
