--- a/toxin/src/pages/cards/cards.pug
+++ b/toxin/src/pages/cards/cards.pug
@@ -36,5 +36,5 @@ block cards-section
 
                 .cards__item
                     .gallery__items
-                        +gallery('gallery-1.jpg', 'true', '№', '888', 'люкс', '9 990₽', ' в сутки', 'star', '', 'cards__rate form-elements__rate--right', '145', 'Отзывов')
-                        +gallery('gallery-2.jpg', 'false', '№', '840', '', '9 990₽', ' в сутки', 'star', '', '', '65', 'Отзывов')
+                        +gallery('gallery-1.png', 'true', '№', '888', 'люкс', '9 990₽', ' в сутки', 'star', '', 'cards__rate form-elements__rate--right', '145', 'Отзывов')
+                        +gallery('gallery-2.png', 'false', '№', '840', '', '9 990₽', ' в сутки', 'star', '', '', '65', 'Отзывов')
