доделала логику открывания подменю в меню в headers

--- a/toxin/src/blocks/headers-footers/header/header.pug
+++ b/toxin/src/blocks/headers-footers/header/header.pug
@@ -7,8 +7,8 @@ mixin header(dataType)
             .logo-wrapper
                 include ../../logo/logo-main
             .header__menu--register
-                .menu
-                    .menu__list
+                nav.menu
+                    ul.menu__list
                         -
                             let menuList = [
                                 {title: "О нас", link: "#", showFooter: true,},
