--- a/toxin/src/blocks/headers-footers/menu/menu.scss
+++ b/toxin/src/blocks/headers-footers/menu/menu.scss
@@ -1,75 +1,108 @@
-.menu__expander{
-    font-family: 'Material Icons', OpenSans, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: rgba(31, 32, 65, 0.5);
-}
-
 .menu{
     position: relative;
     right: 30px;
-}
 
-.menu__expander:after {
-    content: '\e313';
-    font-family: 'Material Icons';
-    font-size: 1.5rem;
-    width: 24px;
-    line-height: 1.25rem;
-}
+    &__expander{
+        font-family: 'Material Icons', OpenSans, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 20px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: rgba(31, 32, 65, 0.5);
+    }
 
-.menu__list{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    list-style: none;
-}
 
-.menu__submenu--wrap{
-    padding-right: 12px;
-}
 
-.menu__submenu{
-    display: none;
-    position: absolute;
-    background-color: white;
-    border-radius: 4px;
-}
+    &__list{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        list-style: none;
+    }
 
-.menu__submenu--visible{
-    display: flex;
-    flex-direction: column;
+    &__submenu--wrap{
+        padding-right: 12px;
+    }
+
+    &__submenu{
+        display: none;
+        position: absolute;
+        background-color: white;
+        border-radius: 4px;
+        margin-top: 55px;
+        list-style: none;
+    }
+
+    &__submenu--visible{
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__sub-item {
+        padding-top: 10px;
+
+        &:hover{
+            background-color: #eee;
+        }
+    }
+
+    &__link{
+        font-family: Montserrat, OpenSans, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        color: rgba(31, 32, 65, 0.5);
+        text-decoration: none;
+        padding-right: 20px;
+    }
+
+    &__link--icon{
+        padding-right: 0;
+    }
+
+    &__link--bold{
+        font-weight: bold;
+    }
 }
 
 .submenu__link{
     padding: 10px 16px;
     width: 85px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+
+    &__link:hover {
+        background-color: rgba(31,32,65,0.05);
+    }
 }
 
-.submenu__link:hover {
-    background-color: rgba(31,32,65,0.05);
+.show {
+    display: block;
 }
 
-.menu__link{
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: rgba(31, 32, 65, 0.5);
-    text-decoration: none;
-    padding-right: 20px;
-}
-
-.menu__link--icon{
-    padding-right: 0;
-}
-
-.menu__link--bold{
-    font-weight: bold;
+.checkmark {
+    background: none;
+    border: solid;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    width: 7px;
+    height: 7px;
+    &__down {
+        transform: rotate(45deg);
+        margin-right: 7px;
+        margin-left: 9.5px;
+        margin-bottom: 2px;
+    }
+    &__up {
+        transform: rotate(225deg);
+        margin-right: 7px;
+        margin-left: 9.5px;
+        margin-bottom: -3px;
+    }
 }
