наполовину сделана логика dropdown, работаю над кнопками календаря

--- a/toxin/src/blocks/form-elements/dropdown/dropdown.pug
+++ b/toxin/src/blocks/form-elements/dropdown/dropdown.pug
@@ -1,6 +1,6 @@
 include ../text-field/text-field
 
-mixin dropdownCard(mainTitle, dropdownTitle, titleControls1, titleControls2, titleControls3)
+mixin dropdownCard(mainTitle, dropdownTitle, titleControls1, titleControls2, titleControls3, titleControls4, titleControls5, titleControls6)
     .form-elements__dropdown
         form(action="")
             +formElementsHeader(mainTitle)
@@ -8,9 +8,22 @@ mixin dropdownCard(mainTitle, dropdownTitle, titleControls1, titleControls2, tit
                 +dropdown(dropdownTitle)
 
             div(class="dropdown__menu")
-                +dropdownControls('', titleControls1, '-', '0', '+')
-                +dropdownControls('', titleControls2, '-', '0', '+')
-                +dropdownControls('', titleControls3, '-', '0', '+')
+                if(titleControls1 === 'Взрослые')
+                    +dropdownControls('adults', titleControls1)
+                if(titleControls2 === 'Дети')
+                    +dropdownControls('children', titleControls2)
+
+                if(titleControls3 === 'Младенцы')
+                    +dropdownControls('babies', titleControls3)
+
+                if(titleControls4 === 'Спальни')
+                    +dropdownControls('bedrooms', titleControls4)
+
+                if(titleControls5 === 'Кровати')
+                    +dropdownControls('beds', titleControls5)
+
+                if(titleControls6 === 'Ванные комнаты')
+                    +dropdownControls('bathroom', titleControls6)
 
                 div(class="dropdown__buttons" data-id="item-btn")
                     button(class="clear-btn") Очистить
@@ -20,10 +33,10 @@ mixin dropdown(placeholder)
     input(class="text-field--dropdown", placeholder= placeholder, readonly="readonly")
     i(class="material-icons") expand_more
 
-mixin dropdownControls(dataId, title, minus, count, plus)
+mixin dropdownControls(dataId, title)
     div(class="dropdown__menu-option" data-id= dataId)
         .dropdown__item #{title}
         div(class="dropdown__controls")
-            .dropdown__minus #{minus}
-            .dropdown__count #{count}
-            .dropdown__plus #{plus}
+            .dropdown__minus
+            .dropdown__count 0
+            .dropdown__plus
