--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -38,7 +38,7 @@ block form-section
                             +inputField('', '', 'text-field', 'hover', 'email', 'Email')
 
                 .form-elements-item
-                    +dropdownCard('dropdown', 'Сколько гостей', 'Взрослые', 'Дети', 'Младенцы')
+                    +dropdownCard('dropdown', 'Сколько гостей', 'Взрослые', 'Дети', 'Младенцы', '', '', '')
 
                 .form-elements-item
                     .form-elements__dropdown
@@ -75,10 +75,10 @@ block form-section
                                     i(class="material-icons--email subscription__button") arrow_forward
 
                 .form-elements-item
-                    +dropdownCard('dropdown', '2 спальни, 2 кровати', 'Спальни', 'Кровати', 'Ванные комнаты')
+                    +dropdownCard('dropdown', '2 спальни, 2 кровати', '', '', '', 'Спальни', 'Кровати', 'Ванные комнаты')
 
                 .form-elements-item
-                    +dropdownCard('dropdown', '2 спальни, 2 кровати', 'Спальни', 'Кровати', 'Ванные комнаты')
+                    +dropdownCard('dropdown', '2 спальни, 2 кровати', '', '', '', 'Спальни', 'Кровати', 'Ванные комнаты')
 
                 .form-elements-item
                     .form-elements__expander
