--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -135,7 +135,7 @@ block form-section
                             +rateButton('star', '', '', 'form-elements__rate--right')
 
                 .form-elements-item
-                    +dropdownCard('dropdown', 'Сколько гостей', 'Взрослые', 'Дети', 'Младенцы')
+                    +dropdownCard('dropdown', 'Сколько гостей', 'Взрослые', 'Дети', 'Младенцы', '', '', '')
 
                 .form-elements-item
                     +formElementsHeader('Rich Checkbox Buttons')
@@ -168,7 +168,7 @@ block form-section
                         +paginationCard()
 
                 .form-elements-item
-                    +dropdownCard('dropdown', 'Сколько гостей', 'Взрослые', 'Дети', 'Младенцы')
+                    +dropdownCard('dropdown', 'Сколько гостей', 'Взрослые', 'Дети', 'Младенцы', '', '', '')
 
                 .form-elements-item
                     .form-elements__bullet
