правки в диаграмме chart.js в room-details

--- a/toxin/src/pages/room-details/room-details.pug
+++ b/toxin/src/pages/room-details/room-details.pug
@@ -35,6 +35,7 @@ block roomDetails-section
                     +formElementsHeader('Впечатления от номера')
 
                     .chart__wrapper
+                        span#actual-font
                         .chart
                             canvas(id="myChart")
 
